# human-ratings

./: .gitignore  Cargo.toml
src/: errors.rs  macros.rs  main.rs  routes.rs  settings.rs  structs.rs  utils.rs
templates/: episode.html.tera  list.html.tera  login.html.tera
