[package]
name = "human"
version = "0.1.0"
authors = ["Hogshead <hogshead@alexburka.com>"]

#[[bin]]
#name = "expanded"
#path = "expanded.rs"

[dependencies]
rocket = "0.3.0"
rocket_codegen = "0.3.0"
rocket_contrib = { version = "0.3.0", default-features = false, features = ["tera_templates"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
csv = "1.0.0-beta.3"

error-chain = "0.10.0"
glob = "0.2.11"
unborrow = "0.3.1"
iflet = "0.1.0"
rand = "0.3.15"

flow = { path = "../../nri/crates/back/flow" }

